<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_weather_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@mipmap/clear">

        <TextView
            android:id="@+id/tv_weather_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/_31"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/tv_weather_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_weather_temperature"
            android:layout_marginLeft="20dp"
            android:text="@string/weacher_address"
            android:textColor="#FFFFFF"
            android:layout_marginStart="20dp" />

        <View
            android:id="@+id/vi_view"
            android:layout_width="1dp"
            android:layout_height="13dp"
            android:layout_below="@+id/tv_weather_temperature"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@+id/tv_weather_address"
            android:background="#FFFFFF"
            android:layout_marginStart="3dp"
            android:layout_toEndOf="@+id/tv_weather_address" />

        <TextView
            android:id="@+id/tv_weather_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_weather_temperature"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/vi_view"
            android:gravity="center"
            android:text="@string/weather"
            android:textColor="#FFFFFF"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/vi_view" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_weather_direction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wind"
                android:textColor="#FFFFFF" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hum"
                android:textColor="#FFFFFF" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/vis"
                android:textColor="#FFFFFF" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_weather_directionprice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wind_size"
                android:textColor="#FFFFFF" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:background="#FFFFFF" />

            <TextView
                android:id="@+id/tv_weather_humidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hun_price"
                android:textColor="#FFFFFF" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:background="#FFFFFF" />

            <TextView
                android:id="@+id/tv_weather_visibility"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/vis_price"
                android:textColor="#FFFFFF" />

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            tools:ignore="NestedWeights">

            <ImageView
                android:id="@+id/iv_weather_today"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/fine"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/tv_weather_todayday"
                android:layout_toRightOf="@+id/iv_weather_today"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:layout_toEndOf="@+id/iv_weather_today"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/tv_weather_weathermini"
                android:layout_below="@id/tv_weather_todayday"
                android:layout_toRightOf="@+id/iv_weather_today"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:text="@string/weather_today"
                android:layout_toEndOf="@+id/iv_weather_today"
                android:layout_marginStart="10dp"
                tools:ignore="SmallSp" />
            <View
                android:id="@+id/vi_view1"
                android:layout_width="1dp"
                android:layout_height="9dp"
                android:background="#888888"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="3dp"
                android:layout_below="@id/tv_weather_todayday"
                android:layout_toRightOf="@id/tv_weather_weathermini"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/tv_weather_weathermini" />

            <TextView
                android:id="@+id/tv_weather_todaywind_dir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_below="@id/tv_weather_todayday"
                android:layout_toRightOf="@+id/vi_view1"
                android:textSize="11sp"
                android:text="@string/wind_price_today"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@+id/vi_view1"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tv_weather_maxtemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textSize="30sp"
                android:text="@string/tmp_max_today"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp" />
            <TextView
                android:id="@+id/tv_weather_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_toLeftOf="@+id/tv_weather_maxtemperature"
                android:textSize="20sp"
                android:text="@string/view"
                android:layout_toStartOf="@+id/tv_weather_maxtemperature" />

            <TextView
                android:id="@+id/tv_weather_mintemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/tv_weather_string"
                android:textSize="30sp"
                android:text="@string/tmp_min_today"
                android:layout_toStartOf="@+id/tv_weather_string" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#888888"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_weather_tomorrow"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/fine"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/tv_weather_tomorrowday"
                android:layout_toRightOf="@+id/iv_weather_tomorrow"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomorrow"
                android:layout_toEndOf="@+id/iv_weather_tomorrow"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/tv_weather_weatherminitr"
                android:layout_below="@id/tv_weather_tomorrowday"
                android:layout_toRightOf="@+id/iv_weather_tomorrow"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:text="@string/weather_tomorron"
                android:layout_toEndOf="@+id/iv_weather_tomorrow"
                android:layout_marginStart="10dp"
                tools:ignore="SmallSp" />
            <View
                android:id="@+id/vi_viewtr"
                android:layout_width="1dp"
                android:layout_height="9dp"
                android:background="#888888"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="3dp"
                android:layout_below="@id/tv_weather_tomorrowday"
                android:layout_toRightOf="@id/tv_weather_weatherminitr"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/tv_weather_weatherminitr" />

            <TextView
                android:id="@+id/tv_weather_trwind_dir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_below="@id/tv_weather_tomorrowday"
                android:layout_toRightOf="@+id/vi_viewtr"
                android:textSize="11sp"
                android:text="@string/wind_price"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@+id/vi_viewtr"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tv_weather_maxtemperaturetr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textSize="30sp"
                android:text="@string/tmp_max_tomorrow"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp" />
            <TextView
                android:id="@+id/tv_weather_stringtr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_toLeftOf="@+id/tv_weather_maxtemperaturetr"
                android:textSize="20sp"
                android:text="@string/view_tomorrow"
                android:layout_toStartOf="@+id/tv_weather_maxtemperaturetr" />

            <TextView
                android:id="@+id/tv_weather_mintemperaturetr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/tv_weather_stringtr"
                android:textSize="30sp"
                android:text="@string/tmp_min_tomorrow"
                android:layout_toStartOf="@+id/tv_weather_stringtr" />



        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#888888"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_weather_aftertomorrow"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/fine"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/tv_weather_aftertomorrowday"
                android:layout_toRightOf="@+id/iv_weather_aftertomorrow"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aftertomorrow"
                android:layout_toEndOf="@+id/iv_weather_aftertomorrow"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/tv_weather_weatherminiatr"
                android:layout_below="@id/tv_weather_aftertomorrowday"
                android:layout_toRightOf="@+id/iv_weather_aftertomorrow"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:text="@string/weather_aftertomorrow"
                android:layout_toEndOf="@+id/iv_weather_aftertomorrow"
                android:layout_marginStart="10dp"
                tools:ignore="SmallSp" />
            <View
                android:id="@+id/vi_viewatr"
                android:layout_width="1dp"
                android:layout_height="9dp"
                android:background="#888888"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="3dp"
                android:layout_below="@id/tv_weather_aftertomorrowday"
                android:layout_toRightOf="@id/tv_weather_weatherminiatr"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/tv_weather_weatherminiatr" />

            <TextView
                android:id="@+id/tv_weather_atrwind_dir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_below="@id/tv_weather_aftertomorrowday"
                android:layout_toRightOf="@+id/vi_viewatr"
                android:textSize="11sp"
                android:text="@string/wind_price_aftertomorrow"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@+id/vi_viewatr"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tv_weather_maxtemperatureatr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textSize="30sp"
                android:text="@string/tmp_max_aftertomorrow"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp" />
            <TextView
                android:id="@+id/tv_weather_stringatr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_toLeftOf="@+id/tv_weather_maxtemperatureatr"
                android:textSize="20sp"
                android:text="@string/view_aftertomorrow"
                android:layout_toStartOf="@+id/tv_weather_maxtemperatureatr" />

            <TextView
                android:id="@+id/tv_weather_mintemperatureatr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/tv_weather_stringatr"
                android:textSize="30sp"
                android:text="@string/tmp_min_aftertomorrow"
                android:layout_toStartOf="@+id/tv_weather_stringatr" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
